Fix img container, fix tooltip arrow position, refactor css, fix dialog overlap WIP

--- a/org-chart-feature/src/assets/_bio-dialog.scss
+++ b/org-chart-feature/src/assets/_bio-dialog.scss
@@ -33,12 +33,14 @@
 
         &[data-popper-placement^='top']>.popper--arrow {
             bottom: -4px;
-            transform: rotate(45deg) translateX(-#{$arrow-size / 2});
+            left: -6px !important;
+            transform: rotate(45deg) translateX(calc(-#{$arrow-size} / 2));
         }
 
         &[data-popper-placement^='bottom']>.popper--arrow {
+            left: -6px !important;
             top: -4px;
-            transform: rotate(45deg) translateX(-#{$arrow-size / 2});
+            transform: rotate(45deg) translateX(calc(-#{$arrow-size} / 2));
         }
 
         &[data-popper-placement^='left']>.popper--arrow {
